--- a/src/main/resources/templates/mustache/mustacheTest.mustache
+++ b/src/main/resources/templates/mustache/mustacheTest.mustache
@@ -51,7 +51,13 @@
             {{/ list }}
             </table>
         </div>
-        
+        <div>
+            {{>mustache/patients}}
+        </div>
+        <div>
+            <p>Comment</p>
+            {{!comments}}
+        </div>
 
 </body>
 </html>
