--- a/src/main/resources/templates/mustache/patients.mustache
+++ b/src/main/resources/templates/mustache/patients.mustache
@@ -99,7 +99,7 @@
 <h1>Patients</h1>
 
 <div id="patientForm">
-    <form action="patientForm" method="post">
+    <form action="patientFormMustache" method="post">
         <input type="text" name="surname" placeholder="Surname" required>
         <input type="text" name="name" placeholder="Name" required>
         <input type="text" name="patronymic" placeholder="Patronymic">
