--- a/src/main/resources/templates/patientUpdate.html
+++ b/src/main/resources/templates/patientUpdate.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <th:block th:insert= "~{fragments/settingsPage ::settingsFragment }" />
     <title>Patient Update</title>
 </head>
 <body>
+    <th:block th:insert = "~{fragments/headerPage ::headerFragment }" />
     <div>
         <form th:action="@{patientUpdateForm}" method="post" th:object="${patient}">
             <input type="hidden" name="id" th:value="${patient.id}">
