--- a/src/main/resources/templates/fragments/headerPage.html
+++ b/src/main/resources/templates/fragments/headerPage.html
@@ -1,8 +1,8 @@
-<nav class="header" th:fragment= "headerFragment">
-    <div class="headerElement"><a href="patients">Patients</a></div>
-    <div class="headerElement"><a href="error">Error Page</a></div>
-    <div class="headerElement"><a href="test">Test</a></div>
-    
-    <div slyle="clear:both;"></div>
-
+<nav class="header" th:fragment="headerFragment">
+    <div class="header-nav">
+        <div class="headerElement"><a href="patients" class="header-link">Patients</a></div>
+        <div class="headerElement"><a href="error" class="header-link">Error Page</a></div>
+        <div class="headerElement"><a href="test" class="header-link">Test</a></div>
+    </div>
+    <div style="clear:both;"></div>
 </nav>
