--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -1,58 +1,87 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <th:block th:insert= "~{fragments/settingsPage ::settingsFragment }" />
+    <th:block th:insert="~{fragments/settingsPage ::settingsFragment}" />
     <title>Patients</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Підключення CSS -->
 </head>
 
 <body>
-    <th:block th:insert= "~{fragments/headerPage ::headerFragment }" />
-    <div>
-        <form th:action="@{/addPatientForm}" method="post" >
-            <input type="text" name="surname" placeholder="Surname" value="a">
-            <input type="text" name="name" placeholder="Name" value="a">
-            <input type="text" name="patronymic" placeholder="Patronymic" value="a">
-            <select name="gender">
-                <option value="NONE">NONE</option>
-                <option value="MALE">MALE</option>
-                <option value="FEMALE">FEMALE</option>
-            </select>
-            <input type="date" name="birthDate" value="2004-09-12">
-            <input type="text" name="phonenumber" placeholder="Phonenumber" value="555" >
-            <input type="email" name="email" placeholder="email" value="1@ukr.net">
-            <input type="submit" value="Save">
+    <th:block th:insert="~{fragments/headerPage ::headerFragment}" />
+    
+    <div class="container">
+        <form th:action="@{/addPatientForm}" method="post" class="patient-form">
+            <div class="form-group">
+                <label for="surname">Surname:</label>
+                <input type="text" id="surname" name="surname" placeholder="Surname" value="a">
+            </div>
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" placeholder="Name" value="a">
+            </div>
+            <div class="form-group">
+                <label for="patronymic">Patronymic:</label>
+                <input type="text" id="patronymic" name="patronymic" placeholder="Patronymic" value="a">
+            </div>
+            <div class="form-group">
+                <label for="gender">Gender:</label>
+                <select id="gender" name="gender">
+                    <option value="NONE">NONE</option>
+                    <option value="MALE">MALE</option>
+                    <option value="FEMALE">FEMALE</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="birthDate">Birth Date:</label>
+                <input type="date" id="birthDate" name="birthDate" value="2004-09-12">
+            </div>
+            <div class="form-group">
+                <label for="phonenumber">Phone Number:</label>
+                <input type="text" id="phonenumber" name="phonenumber" placeholder="Phone Number" value="555">
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" placeholder="Email" value="1@ukr.net">
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="submit-button">
+            </div>
         </form>
     </div>
-    <div>
-        <table>
-            <tr>
-                <th>ID</th>
-                <th>Surmame</th>
-                <th>Name</th>
-                <th>patronymic</th>
-                <th>Gender</th>
-                <th>BirthDate</th>
-                <th>Phonenumber</th>
-                <th>Email</th>
-            </tr>
-            <tr th:each = "patient:${patientList}">
-                <td th:utext="${patient.id}"></td>
-                <td th:utext="${patient.surname}"></td>
-                <td th:utext="${patient.name}"></td>
-                <td th:utext="${patient.patronymic}"></td>
-                <td th:utext="${patient.gender}"></td>
-                <td th:utext="${patient.birthDate}"></td>
-                <td th:utext="${patient.phonenumber}"></td>
-                <td th:utext="${patient.email}"></td>
-                <td>
-                    <form th:action= "@{/patientUpdateRedirect}" method="post">
-                        <input type="hidden" name="patientId" th:value="${patient.id}"/>
-                        <input type="submit" value="&#8942;"/>
-                    </form>
-                </td>
-            </tr>
+    <div class="container">
+        <table class="patient-table">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Surname</th>
+                    <th>Name</th>
+                    <th>Patronymic</th>
+                    <th>Gender</th>
+                    <th>Birth Date</th>
+                    <th>Phone Number</th>
+                    <th>Email</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="patient : ${patientList}">
+                    <td th:utext="${patient.id}"></td>
+                    <td th:utext="${patient.surname}"></td>
+                    <td th:utext="${patient.name}"></td>
+                    <td th:utext="${patient.patronymic}"></td>
+                    <td th:utext="${patient.gender}"></td>
+                    <td th:utext="${patient.birthDate}"></td>
+                    <td th:utext="${patient.phonenumber}"></td>
+                    <td th:utext="${patient.email}"></td>
+                    <td>
+                        <form th:action="@{/patientUpdateRedirect}" method="post">
+                            <input type="hidden" name="patientId" th:value="${patient.id}" />
+                            <input type="submit" value="&#8942;" class="action-button"/>
+                        </form>
+                    </td>
+                </tr>
+            </tbody>
         </table>
-
     </div>
 </body>
 </html>
