--- a/src/main/resources/templates/patientUpdate.html
+++ b/src/main/resources/templates/patientUpdate.html
@@ -4,58 +4,73 @@
     <th:block th:insert= "~{fragments/settingsPage ::settingsFragment }" />
     <title>Patient Update</title>
 </head>
-<body th:object="${patient}">
-    <th:block th:insert = "~{fragments/headerPage ::headerFragment }" />
-    <div>
-        <form th:action="@{patientUpdateForm}" method="post">
-            <input type="hidden" name="id" th:value="${patient.id}">
-            <input type="text" name="surname" th:value="${patient.surname}" placeholder="Surname">
-            <input type="text" name="name" th:value="${patient.name}" placeholder="Name">
-            <input type="text" name="patronymic" th:value="${patient.patronymic}" placeholder="Patronymic">
-            
-            <!-- <input type="text" name="gender" th:value="${patient.surname}" placeholder="Surname"> -->
-            <!--/* Коментар Thymeleaf */-->
-            
-            <!--/* 1 */-->
-            <!--/* <select name="gender" id="gender">
-                < Якщо Gender в окремому файлі */-->
-                <!-- <option th:each = "gender:${Gender.value()}"></option> -->
-                 <!-- Якщо Patient.Gender всередені іншого класу (для вкладених класів)*/-->
-                 <!-- <option th:each = "gender : ${T(com.example.Health.models.Patient.Gender).values()}" 
-                 th:value="${gender.name()}" th:utext="${gender.name()}"
-                 th:selected= "${gender == patient.gender }"></option>
-            </select> -->
-            
-            <!--/* 2 */-->
+<body>
+    <th:block th:object="${patient}">
+        <th:block th:insert = "~{fragments/headerPage ::headerFragment }" />
+        <div>
+            <form th:action="@{patientUpdateForm}" method="post">
+                <input type="hidden" name="id" th:value="${patient.id}">
+                <input type="text" name="surname" th:value="${patient.surname}" placeholder="Surname">
+                <input type="text" name="name" th:value="${patient.name}" placeholder="Name">
+                <input type="text" name="patronymic" th:value="${patient.patronymic}" placeholder="Patronymic">
+                
+                <!-- <input type="text" name="gender" th:value="${patient.surname}" placeholder="Surname"> -->
+                <!--/* Коментар Thymeleaf */-->
+                
+                <!--/* 1 */-->
+                <!--/* <select name="gender" id="gender">
+                    < Якщо Gender в окремому файлі */-->
+                    <!-- <option th:each = "gender:${Gender.value()}"></option> -->
+                    <!-- Якщо Patient.Gender всередені іншого класу (для вкладених класів)*/-->
+                    <!-- <option th:each = "gender : ${T(com.example.Health.models.Patient.Gender).values()}" 
+                    th:value="${gender.name()}" th:utext="${gender.name()}"
+                    th:selected= "${gender == patient.gender }"></option>
+                </select> -->
+                
+                <!--/* 2 */-->
 
-            <select name="gender" id="gender">
-                <th:block th:each = "gender : ${T(com.example.Health.models.Patient.Gender).values()}">
-                <option  
-                 th:value="${gender.name()}" 
-                 th:utext="${gender.name()}"
-                 th:selected= "${gender == patient.gender }"></option>
-                </th:block>
-            </select>
-            
-            
-            <input type="date" name="birthDate" th:value="${patient.birthDate}">
-            <input type="text" name="phonenumber" th:value="${patient.phonenumber}" placeholder="Phonenumber">
-            <input type="email" name="email" th:value="${patient.email}" placeholder="Email">
-            
-            <input type="submit" value="Save">
+                <select name="gender" id="gender">
+                    <th:block th:each = "gender : ${T(com.example.Health.models.Patient.Gender).values()}">
+                    <option  
+                    th:value="${gender.name()}" 
+                    th:utext="${gender.name()}"
+                    th:selected= "${gender == patient.gender }"></option>
+                    </th:block>
+                </select>
+                
+                
+                <input type="date" name="birthDate" th:value="${patient.birthDate}">
+                <input type="text" name="phonenumber" th:value="${patient.phonenumber}" placeholder="Phonenumber">
+                <input type="email" name="email" th:value="${patient.email}" placeholder="Email">
+                <input type="submit" value="Save">
+            </form>
 
-        </form>
+        </div>
+        <div>
+            <form th:action="@{/addProcedureForm}" th:method="@{post}">
+                <input type="hidden" name="patientId" th:value="${patient.id}">
+                <input type="text" name="procedures">
+                <input type="submit" value="Save">
+            </form>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    <th>ID</th>
+                    <th>Procedures</th>
+                    <th></th>
+                </tr>
+                <tr th:each= "procedureObj:${patient.procedures}">
+                    <form action="" method="post">
+                        <td><input type="text" name="id" th:value="${procedureObj.id}" disabled></td>
+                        <td><input type="text" name="proctdure" id="" th:value="${procedureObj.procedures}"> </td>
+                        <td><button type = "submit" onclick="updateProcedure()" id = "updateProcedure">Save</button> </td>
+                    </form>
+                </tr>
+            </table>
+        </div>
 
-    </div>
-    <div>
-        <form th:action="@{/addProcedureForm}" th:method="@{post}">
-            <input type="hidden" name="patientId" th:value="${patient.id}">
-            <input type="text" name="procedures">
-            <input type="submit" value="Save">
-        </form>
-
-    </div>
+    </th:block>
     <script type="text/javascript" src="js/patientUpdate.js"></script>
-
 </body>
 </html>
